# duumbi

./: .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STAGING_SETUP_CHECKLIST.md  codecov.yml  duumbi.code-workspace  nx.json  opencode.json  package-lock.json  package.json  renovate.json  tsconfig.base.json  tsconfig.json  vercel.json
.agent/rules/: code-style-guide.md
.augment/rules/: code-style-guide.md
.claude/: settings.json
.claude/agents/: cli-scaffolding.md  cranelift-impl.md  jsonld-graph.md
.devcontainer/: devcontainer.json  post-create.sh
.duumbi/: config.toml
.duumbi/graph/: main.jsonld  math_fibonacci.jsonld  math_lcm.jsonld  math_ops.jsonld  math_prime.jsonld  number_ops.jsonld
.duumbi/intents/: add-two-numbers-together-2.yaml  calculate-the-integer-square-root-of-a-n.yaml  calculate-the-perimeter-of-a-triangle-gi.yaml  check-if-a-number-is-even.yaml  check-if-a-number-is-prime.yaml  clamp-a-number-between-a-minimum-and-max.yaml  convert-a-binary-number-as-integer-like.yaml  convert-celsius-to-fahrenheit.yaml  count-the-divisors-of-a-number.yaml  determine-the-sign-of-a-number-positive.yaml  find-the-greatest-common-divisor-of-two-2.yaml  find-the-greatest-common-divisor-of-two.yaml  how-many-steps-does-the-collatz-sequence-2.yaml  how-many-steps-does-the-collatz-sequence.yaml  is-a-given-year-a-leap-year.yaml  sum-the-digits-of-a-three-digit-number.yaml  which-of-two-numbers-is-bigger.yaml  write-a-factorial-function.yaml  write-a-fibonacci-function-2.yaml
.duumbi/learning/: successes.jsonl
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ai-review-instructions.md  copilot-review-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: coding.agent.md  obsidian-doc-sync.agent.md  planning.agent.md  research.agent.md  review.agent.md  testing.agent.md
.github/prompts/: obsidian-doc-sync.prompt.md
.github/workflows/: ci.yml  clarification-routing.yml  copilot-review.yml  coverage.yml  deploy-backend.yml  docs-review.yml  docs.yml  human-acceptance-request.yml  implementation-review-request.yml  inbox-enrichment-dispatch.yml  model-catalog-publisher.yml  obsidian-docs-discord.yml  ralph-cycle-approval-request.yml  ready-for-build-handoff.yml  release.yml  slack-intake-dispatch.yml  spec-ai-gate.yml  spec-review-request.yml  stage-10-authorization.yml  stage-approval.yml  stage11-merge-decision.yml  (+5 more)
.greptile/: config.json  files.json  rules.md
apps/backend/: .env.example  Dockerfile  README.md  project.json  pyproject.toml
apps/backend/docs/: AZURE_VISION_SETUP.md  TAGGER_API_EXAMPLES.md
apps/backend/src/: main.py
apps/backend/src/avm/: router.py
apps/backend/src/scraper/: router.py
apps/backend/src/tagger/: README.md  __init__.py  azure_client.py  config.py  exceptions.py  models.py  router.py  service.py  validators.py
apps/backend/tests/: test_main.py
apps/backend/tests/tagger/: README.md  __init__.py  test_azure_client.py  test_integration.py  test_router.py  test_service.py  test_validators.py
crates/duumbi-studio/: Cargo.toml
crates/duumbi-studio/src/: app.rs  lib.rs  server_fns.rs  state.rs  theme.rs  ws.rs
crates/duumbi-studio/src/components/: breadcrumb.rs  command_palette.rs  footer.rs  icon_rail.rs  inspector.rs  mod.rs  search_overlay.rs  shortcuts.rs  toast.rs
crates/duumbi-studio/src/components/chat/: mod.rs
crates/duumbi-studio/src/components/graph/: c4_code.rs  c4_component.rs  c4_container.rs  c4_context.rs  interaction.rs  mod.rs  svg_edge.rs  svg_node.rs
crates/duumbi-studio/src/components/panels/: build_panel.rs  graph_panel.rs  intents_panel.rs  mod.rs
crates/duumbi-studio/src/components/sidebar/: mod.rs
crates/duumbi-studio/src/layout/: edge_routing.rs  mod.rs  sugiyama.rs  types.rs
crates/duumbi-studio/src/script/: studio.js
crates/duumbi-studio/src/style/: studio.css
crates/duumbi-studio/tests/: studio_layout.rs
docs/: DATABASE.md  architecture.md  coding-conventions.md  duumbi-686-docs-audit.md  examples.md  mcp-model-telemetry.md  phase15-studio-redesign-issues.md  provider-catalog.md  rewrite-engine.md
infra/: .gitignore  Pulumi.yaml  README.md  dns_backup.json  index.ts  justfile  package-lock.json  package.json  setup-stacks.sh  stack-persistent.ts  stack-platform.ts  stack-workloads.ts  tsconfig.json
runtime/: duumbi_runtime.c  duumbi_runtime.h
scripts/: eval_intent.sh
src/: config.rs  credentials.rs  deps.rs  errors.rs  examples.rs  hash.rs  lib.rs  logging.rs  main.rs  manifest.rs  patch.rs  snapshot.rs  tools.rs  types.rs  workflow.rs  workspace.rs
stdlib/: db.jsonld  file.jsonld  file.manifest.toml  http.jsonld  io.jsonld  json.jsonld  lang.jsonld  math.jsonld  net.jsonld  server.jsonld  server.manifest.toml  string.jsonld
tests/: integration_duumbi379.rs  integration_duumbi380_db.rs  integration_duumbi380_e2e.rs  integration_duumbi380_http.rs  integration_duumbi382_ecosystem_smoke.rs  integration_duumbi675_model_catalog_publisher.rs  integration_duumbi684_rewrite.rs  integration_duumbi688_flagship_example.rs  integration_duumbi714_backend_hardening.rs  integration_duumbi717_properties.rs  integration_duumbi720_determinism.rs  integration_duumbi738_loop_native.rs  integration_duumbi_378_cycle1.rs  integration_duumbi_378_cycle2.rs  integration_duumbi_378_cycle3.rs  integration_duumbi_381_cycle3.rs  integration_phase0.rs  integration_phase1.rs  integration_phase10_aware.rs  integration_phase10_context.rs  integration_phase10_know.rs  integration_phase10_mod.rs  integration_phase10_session.rs  integration_phase12.rs  integration_phase16_color.rs  integration_phase2.rs  integration_phase3.rs  integration_phase4.rs  integration_phase5.rs  integration_phase7_local.rs  integration_phase9a.rs  integration_phase9a1.rs  integration_phase9a2.rs  integration_phase9a3.rs  integration_phase9a_stdlib.rs  integration_phase9b.rs  integration_phase9c.rs  integration_telemetry.rs  kill_criterion_phase7.rs
(+566 files in other folders)
