[workspace]
members = [".", "crates/duumbi-studio"]

[package]
name = "duumbi"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
petgraph = "0.8.3"
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-module = "0.130.0"
cranelift-object = "0.130.0"
target-lexicon = "0.13.5"
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "signal"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
reedline = "0.46.0"
futures-util = "0.3.32"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
sha2 = "0.10.9"
semver = "1.0.27"
flate2 = "1.1.9"
tar = "0.4.45"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
axum = "0.8.8"
duumbi-registry = { git = "https://github.com/hgahub/duumbi-registry.git", rev = "3ebd6ee003a749e91b72674e8e77f4f51b8be9da" }
wiremock = "0.6.5"
