[workspace]
members = [".", "crates/duumbi-studio"]

[package]
name = "duumbi"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
petgraph = "0.8.3"
cranelift-codegen = "0.131.0"
cranelift-frontend = "0.131.0"
cranelift-module = "0.131.0"
cranelift-object = "0.131.0"
target-lexicon = "0.13.5"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "signal"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
ratatui = { version = "0.30.0", features = ["crossterm"] }
ratatui-textarea = "0.9.1"
crossterm = "0.29.0"
futures-util = "0.3.32"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
sha2 = "0.11.0"
semver = "1.0.28"
flate2 = "1.1.9"
tar = "0.4.45"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
owo-colors = "4.3.0"
indicatif = "0.18.4"
comfy-table = "7.2.2"
clap_complete = "4.6.2"
strsim = "0.11.1"

[dev-dependencies]
axum = "0.8.9"
duumbi-registry = { git = "https://github.com/hgahub/duumbi-registry.git", rev = "a3adef41242229feaf00f5352fee7d7a7c5891ce" }
wiremock = "0.6.5"
