[project]
name = "duumbi-backend"
version = "0.1.0"
description = "Duumbi Modular Monolith Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
