[package]
name = "duumbi-studio"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
duumbi = { path = "../.." }
leptos = "0.8.17"
leptos_axum = { version = "0.8.8", optional = true }
leptos_router = "0.8.13"
leptos_meta = "0.8.6"
leptos_config = "0.8.9"
axum = { version = "0.8.8", optional = true }
tokio = { version = "1.51.1", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["cors", "fs"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "1.1.2", optional = true }
petgraph = { version = "0.8.3", optional = true }
chrono = { version = "0.4.44", optional = true }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }
web-sys = { version = "0.3.95", features = ["WheelEvent", "MouseEvent", "HtmlInputElement", "EventTarget"] }
wasm-bindgen = "0.2.118"
console_error_panic_hook = "0.1.7"

[[bin]]
name = "studio"
path = "src/bin/studio.rs"
required-features = ["ssr"]

[features]
default = []
ssr = ["leptos/ssr", "leptos_axum", "axum", "tokio", "tower-http", "serde_yaml", "toml", "petgraph", "tracing-subscriber", "chrono"]
hydrate = ["leptos/hydrate"]
